Add CHECK in case PathProviderAndroid is failing.

In bug 600226, RenderProcessHost::Init() is returning
false. The only possible cause I can see is if the path
service returned false, so see if PathProviderAndroid
is returning false.

BUG=600226

Review URL: https://codereview.chromium.org/1914983002

Cr-Commit-Position: refs/heads/master@{#389468}

Former-commit-id: c1a595d1736123171d216b67535303916d95874d