base/base_paths_android.cc
@@ -23,10 +23,11 @@ bool PathProviderAndroid(int key, FilePath* result) {
     case base::FILE_EXE: {
       char bin_dir[PATH_MAX + 1];
       int bin_dir_size = readlink(kProcSelfExe, bin_dir, PATH_MAX);
-      if (bin_dir_size < 0 || bin_dir_size > PATH_MAX) {
-        NOTREACHED() << "Unable to resolve " << kProcSelfExe << ".";
-        return false;
-      }
+      // TODO(falken): This PCHECK is for debugging crbug.com/600226.
+      // Revert to NOTREACHED when the cause of the bug is understood.
+      PCHECK(bin_dir_size > 0 && bin_dir_size <= PATH_MAX)
+          << "Unable to resolve " << kProcSelfExe
+          << ". bin_dir_size=" << bin_dir_size;
       bin_dir[bin_dir_size] = 0;
       *result = FilePath(bin_dir);
       return true;
